updated sidebar links

--- a/src/_includes/management-sidebar.html
+++ b/src/_includes/management-sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar left">
 	<ul>
-		<h3><a href="#introduction">Introduction</a></h3>
+		<h3><a href="#introduction---management-api">Introduction</a></h3>
 		<li><a href="#getting-started">Getting Started</a></li>
 		<li><a href="#making-requests">Making Requests</a></li>
 		<li><a href="#available-resources">Available Resources</a></li>
@@ -14,38 +14,38 @@
 
 	<ul>
 		<h3><a href="#user-resource">User</a></h3>
-		<li><a href="#">POST</a></li>
-		<li><a href="#">UPDATE</a></li>
-		<li><a href="#">DELETE</a></li>
+		<li><a href="#post">POST</a></li>
+		<li><a href="#update">UPDATE</a></li>
+		<li><a href="#delete-1">DELETE</a></li>
 	</ul>
 
 	<ul>
 		<h3><a href="#braid-resource">Braid</a></h3>
-		<li><a href="#">POST</a></li>
-		<li><a href="#">UPDATE</a></li>
-		<li><a href="#">DELETE</a></li>
+		<li><a href="#post-1">POST</a></li>
+		<li><a href="#update-1">UPDATE</a></li>
+		<li><a href="#delete-2">DELETE</a></li>
 	</ul>
 
 	<ul>
 		<h3><a href="#thread-resource">Thread</a></h3>
-		<li><a href="#">POST</a></li>
-		<li><a href="#">UPDATE</a></li>
-		<li><a href="#">DELETE</a></li>
+		<li><a href="#post-2">POST</a></li>
+		<li><a href="#update-2">UPDATE</a></li>
+		<li><a href="#delete-3">DELETE</a></li>
 	</ul>
 
 	<ul>
 		<h3><a href="#modifier-resource">Modifier</a></h3>
-		<li><a href="#">POST</a></li>
-		<li><a href="#">UPDATE</a></li>
-		<li><a href="#">Attach a Modifier</a></li>
-		<li><a href="#">Remove a Modifier</a></li>
-		<li><a href="#">DELETE</a></li>
+		<li><a href="#post-3">POST</a></li>
+		<li><a href="#update-3">UPDATE</a></li>
+		<li><a href="#attach-a-modifier">Attach a Modifier</a></li>
+		<li><a href="#remove-a-modifier">Remove a Modifier</a></li>
+		<li><a href="#delete-4">DELETE</a></li>
 	</ul>
 
 	<ul>
 		<h3><a href="#entries-resource">Entries</a></h3>
-		<li><a href="#">UPDATE</a></li>
-		<li><a href="#">DELETE</a></li>
+		<li><a href="#update-4">UPDATE</a></li>
+		<li><a href="#delete-5">DELETE</a></li>
 	</ul>
 
 
