--- a/src/_includes/sidebar.html
+++ b/src/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar left">
 	<ul>
-		<h3><a href="#introduction">Introduction</a></h3>
+		<h3><a href="#introduction---delivery-api">Introduction</a></h3>
 		<li><a href="#getting-started">Getting Started</a></li>
 		<li><a href="#making-requests">Making Requests</a></li>
 		<li><a href="#available-resources">Available Resources</a></li>
