added the braid example to the docs site

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container">
     <div class="logo left">
-      <img src="assets/images/logo-big@2x.png">
+      <a href="{{ site.url }}"><img src="assets/images/logo-big@2x.png"></a>
     </div>
     <nav class="right">
       <ul>
@@ -11,7 +11,7 @@
         <li>
           <a href="{{ site.baseurl}}management-api.html" {% if page.url == '/management-api.html' %}class="current"{% endif %}>Management API</a>
         </li>
-        <li><a href="#">Examples</a></li>
+        <li><a href="/docs/youtube-example">Examples</a></li>
       </ul>
     </nav>
   </div>
